SERVER-15057: fix one potential deadlock in rocks storage when dropping database